# vista-medicalbot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SPEC.md  alembic.ini  docker-compose.yml  main.py  opencode.json  pyproject.toml
alembic/: env.py
alembic/versions/: 482a5632357e_initial.py  a4c76d1d300f_initial.py
api/: __init__.py  auth.py  chat.py  dependencies.py  errors.py  knowledge.py  sessions.py  uploads.py
core/: __init__.py  config.py  content.py  exceptions.py  security.py  skills.py
db/: base.py  storage.py  vector.py
docs/: SPEC.md  manual_testing.md
models/: __init__.py  chat_message.py  chat_session.py  enums.py  knowledge.py  message.py  refresh_token.py  session.py  upload.py  user.py
prompts/: medical_assistant.md
schemas/: admin.py  auth.py  chat.py  knowledge.py  message.py  session.py  upload.py
services/: admin.py  agent.py  auth.py  chat.py  documents.py  embeddings.py  knowledge.py  multimodal.py  sessions.py  storage.py  uploads.py  vector.py
services/tools/: __init__.py  guidelines.py  skills.py
skills/: document-analysis.md  guideline-retrieval.md
skills/guideline-retrieval/: SKILL.md
src/api/: admin.py  auth.py  chat.py  dependencies.py  knowledge.py  profile.py  sessions.py  stt.py  uploads.py
src/core/: config.py  exceptions.py  security.py  skills.py
src/db/: __init__.py  base.py  session.py
src/models/: __init__.py  chat_message.py  enums.py  knowledge.py  session.py  upload.py  user.py
src/prompts/: medical_assistant.md  persona_arabic.md  persona_persian.md  persona_russian.md  persona_turkish.md
src/schemas/: auth.py  chat.py  knowledge.py  session.py  upload.py  user.py
src/services/: admin.py  agent.py  auth.py  chat.py  documents.py  knowledge.py  sessions.py  stt.py  uploads.py  vector.py
src/services/tools/: files.py  skills.py
src/skills/document-analysis/: SKILL.md
tests/: conftest.py  test_agent.py  test_auth.py  test_chat.py  test_deletion.py  test_knowledge.py  test_language.py
