[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "mudawi"
version = "0.1.0"
description = "Multilingual medical assistant backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.30.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "fastembed>=0.7.0",
    "httpx[socks]>=0.28.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "minio>=7.2.0",
    "pwdlib[argon2]>=0.2.0",
    "pydantic-settings>=2.7.0",
    "pyjwt>=2.10.0",
    "pypdf>=5.0.0",
    "python-frontmatter>=1.1.0",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.13.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "sse-starlette>=2.2.0",
    "uvicorn[standard]>=0.34.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require external services (docker-compose)",
]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-timeout>=2.4.0",
]
